microservice/k8s/microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
        - image: ghcr.io/bartlomiejrasztabiga/ium/microservice:sha-6f1c9e6
          name: microservice
          ports:
            - containerPort: 80
      restartPolicy: Always
