microservice/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ium-ingress
spec:
  rules:
    - host: ium.rasztabiga.me
      http:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservice
                port:
                  number: 80
